# CAVA

./: .gitattributes  .gitignore  README.md  pyproject.toml
data/: convert_from_hf.py
data/EmoCF/: audio_inputs.jsonl  audio_inputs.jsonl_DiVA-llama-3-v0-8b_tone_aware_reply  audio_inputs.jsonl_Qwen2-Audio-7B-Instruct_tone_aware_reply  audio_inputs.jsonl_gemini-2.0-flash-exp_emotion  audio_inputs.jsonl_gemini-2.0-flash-exp_tone_aware_reply  audio_inputs.jsonl_gpt-4o-audio-preview_emotion  audio_inputs.jsonl_gpt-4o-audio-preview_tone_aware_reply  audio_inputs.jsonl_pipeline_gpt-4o_gpt-4o-mini-tts_gpt-4o-mini-transcribe_emotion  audio_inputs.jsonl_pipeline_gpt-4o_gpt-4o-mini-tts_gpt-4o-mini-transcribe_tone_aware_reply  flatten.py
data/ReverseSpellingBee/: audio_inputs.jsonl  audio_inputs.jsonl_gemini-2.0-flash-exp_pronunciation_oed  audio_inputs.jsonl_gpt-4o-audio-preview_pronunciation_audio  audio_inputs.jsonl_gpt-4o-audio-preview_pronunciation_oed  combined_labels.csv  hf_to_jsonl.py
data/Werewolf/: accuracy_script.py  accuracy_script_detection.py  accuracy_script_voting.py  process_dataset_werewolf.py  werewolf.jsonl  werewolf.jsonl_pipeline_gpt-4o_gpt-4o-mini-tts_gpt-4o-mini-transcribe_deception_detection
data/function_calling_test/: .gitignore  audio_inputs.jsonl_gpt-4o-audio-preview_function_calling  audio_inputs.jsonl_pipeline_gpt-4o_gpt-4o-mini-tts_gpt-4o-mini-transcribe_function_calling  functions.json
data/jailbreaking/: inference_jailbreak.py
data/jeopardy/: audio_inputs.jsonl  audio_inputs.jsonl_gemini-2.0-flash-exp_jeopardy  (+3 more)
run_scripts/: run_all.sh  run_ami_tasks.sh  run_counterfactual_tasks.sh  run_function_calling.sh  run_jailbreaking_tasks.sh  run_jeopardy.sh  run_multimodal_instruction_following.sh  run_reverse_spelling_bee.sh  run_werewolf_tasks.sh
src/cats/: config.py  data.py  (+5 more)
tests/: test_function_data_prep.py
(+204 files in other folders)
