[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cats"
version = "0.0.1"
authors = [
  {name="Will Held", email="wheld3@gatech.edu"},
]
description = "A Framework for Multitask Evaluation of Audio Models"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "python-dotenv",
    "soundfile",
    "google-generativeai",
    "librosa",
    "torch",
    "xxhash",
    "datasets",
    "openai",
    "transformers",
    "pydantic",
    "tqdm",
    "argparse",
    "diskcache",
    "google-genai",
    "pandas",
    "pydub",
    "numpy<2.0",
    "scipy",
    "qa-metrics==0.2.32",
    "nltk==3.9.1",
    "instruction_following_eval@git+https://github.com/josejg/instruction_following_eval.git"
]

[tool.hatch.build]
include = ["src/"]
dev-mode-dirs = [".", "src"]

[tool.hatch.build.sources]
"cats" = "src/cats"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
only-include = ["src"]

[tool.hatch.build.targets.wheel]
only-include = ["src/cats"]

[tool.hatch.version]

[project.urls]
"Homepage" = "https://diva-audio.github.io"
"Repository" = "https://github.com/SALT-NLP/CATS"

[tool.black]
line-length = 119
target-version = ["py310"]
preview = true

[tool.isort]
profile = "black"
multi_line_output = 3
lines_after_imports = 2
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 119
src_paths = ["src"]